# lazynet

./: Cargo.toml
app/: Cargo.toml
app/src/: app.rs  main.rs
bln/: Cargo.toml
bln/src/: lib.rs  protocol.rs  tui.rs
bln/src/protocol/: conversions.rs  types.rs
bln/src/tui/: log_view.rs
net/: Cargo.toml
net/src/: client.rs
protocol/: Cargo.toml
protocol/src/: bln.rs  lib.rs  traits.rs  types.rs  utils.rs
protocol/src/bln/: conversions.rs  protocol.rs  types.rs
stream/: Cargo.toml
stream/src/: client.rs  traits.rs
ui/: Cargo.toml
ui/src/: lib.rs  theme.rs  traits.rs
