[package]
name = "app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lazyframe"
path = "src/main.rs"

[dependencies]
color-eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
ratatui.workspace = true
tracing-error = "0.2.1"
tracing-appender = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
stream = { path = "../stream/" }
protocol = { path = "../protocol/" }
bytes = "1.11.0"
futures = "0.3.31"
bln = { path = "../bln/" }
ui = { path = "../ui/" }
